# ds-rants

./: .gitignore  .nojekyll  .notes_and_reference.md  .pre-commit-config.yaml  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  twitter.html  twitter.qmd  verify-author.sh
.gemini/commands/: proofread.toml
.github/workflows/: publish.yml
posts/2025/2025_04_13_your_pandas_code_is_bad/: index.html  index.qmd
posts/2025/2025_04_19_Cancel_A_5.7M$_Deal/: index.html  index.md
posts/2025/2025_04_20_pre-pre-sprint-planning/: index.html  index.md
posts/2025/2025_04_24_Consultancy_obliteration/: index.md  obliteration.html  obliteration.md
posts/2025/2025_04_26_non-pessimization/: non-pessimization.html  non-pessimization.md
posts/2025/2025_04_28_angry_pandas_guide/: angry_pandas_tutorial.html  angry_pandas_tutorial.qmd  angry_pandas_tutorial.quarto_ipynb
posts/2025/2025_04_Cancel_A_5.7M$_Deal/: index.html  index.md
posts/2025/2025_04_How_To_Cancel_A_5.7M$_Deal/: index.md
posts/2025/2025_04_your_pandas_code_is_bad/: index.html  index.qmd
posts/2025/2025_06_05_non-pessimization/: non-pessimization.html  non-pessimization.md
posts/2025_04_your_pandas_code_is_bad/: index.qmd
site_libs/bootstrap/: bootstrap-093132e6bdd7de43d62ee28ff6a68070.min.css  bootstrap-109b4ad6f112555a30aefc1bba789060.min.css  bootstrap-59edb11b171c5957b9e5882861902cb7.min.css  bootstrap-9433ce5a74f539ffa23693f38c94ac7f.min.css  bootstrap-b2d22617993ac071ad52cd4142d8cfaa.min.css
(+14 files in other folders)
