[project]
name = "ds-rants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
